--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,61 @@
 .App {
   text-align: center;
+  margin-bottom: 100px;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+/* Font Face -------------------------------------------------------- */
+@font-face {
+    font-family: 'Proxima Nova';
+    src: url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-bold-webfont.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-bold-webfont.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Proxima Nova';
+    src: url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-semibold-webfont.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-semibold-webfont.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Proxima Nova';
+    src: url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-regular-webfont.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-regular-webfont.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Proxima Nova';
+    src: url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-light-webfont.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-light-webfont.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'SourceSerifPro';
+    src: url('https://www.myregistry.com/Styles/fonts/SourceSerifPro7/source-serif-pro-v7-latin-regular.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/SourceSerifPro7/source-serif-pro-v7-latin-regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'SourceSerifPro';
+    src: url('https://www.myregistry.com/Styles/fonts/SourceSerifPro7/source-serif-pro-v7-latin-600.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/SourceSerifPro7/source-serif-pro-v7-latin-600.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'SourceSerifPro';
+    src: url('https://www.myregistry.com/Styles/fonts/SourceSerifPro7/source-serif-pro-v7-latin-700.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/SourceSerifPro7/source-serif-pro-v7-latin-700.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
 }
 
 @media (prefers-reduced-motion: no-preference) {
