landing page additions

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body {
+  color: #141414;
+  line-height: 1.15;
+  font-size: 16px;
+  font-family: 'Proxima Nova', Arial, sans-serif;
+  font-weight: 400;
+}
 .App {
   text-align: center;
   margin-bottom: 100px;
@@ -18,15 +25,15 @@
 
 @font-face {
     font-family: 'Proxima Nova';
-    src: url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-semibold-webfont.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-semibold-webfont.woff') format('woff');
-    font-weight: 600;
+    src: url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-regular-webfont.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-regular-webfont.woff') format('woff');
+    font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Proxima Nova';
-    src: url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-regular-webfont.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-regular-webfont.woff') format('woff');
-    font-weight: 400;
+    src: url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-semibold-webfont.woff2') format('woff2'), url('https://www.myregistry.com/Styles/fonts/ProximaNova/proximanova-semibold-webfont.woff') format('woff');
+    font-weight: 600;
     font-style: normal;
 }
 
