--- a/src/components/Layout/LandingPage.css
+++ b/src/components/Layout/LandingPage.css
@@ -1,4 +1,27 @@
 .main-container {
 	display: block;
 	position: relative;
+}
+
+.main-section {
+	width: 100%;
+	position: relative;
+	display: block;
+	height: 600px;
+	background-image: url('https://s3.amazonaws.com/static.myregistry.com/cm/ManagerMisc/Landing_page_hero_background.png');
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-position: top right;
 }  
+
+.main-section .action-box {
+	position: absolute;
+	top: 0;
+	left: 10%;
+	bottom: 0;
+	width: 35%;
+	height: 100%;
+	background-color: #FFF;
+	padding: 24px 60px;
+	text-align: center;
+}
