--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,18 @@ body {
   color: #61dafb;
 }
 
+a.pst_link {
+  font-size: 16px;
+  line-height: 20px;
+  color: #4cb9a3;
+  font-weight: 400;
+  text-decoration: none;
+  transition: all ease 300ms;
+}
+a.pst_link:hover {
+  color: #058471;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
