--- a/src/components/Layout/LandingPage.css
+++ b/src/components/Layout/LandingPage.css
@@ -30,11 +30,25 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 24px;
+  margin: 24px auto 0;
+  max-width: 600px;
 }
 
 .main-section .action-box .form-fields .pst_inputtext3-holder {
   margin: 0 0 24px 0;
   flex: 0 1 100%;
   max-width: calc(50% - 4px);
+}
+
+.main-section .action-box .dropdown-holder {
+	max-width: 300px;
+	margin: 0 auto;
+}
+.main-section .action-box .dropdown-holder .pst_inputselect3-holder select.pst_inputselect3 {
+	height: 40px;
+	padding: 5px 30px 5px 14px;
+}
+
+.main-section .action-box .confirm-section {
+	margin: 30px 0;
 }
